Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>TweetsAgainstHumanity by PurpleKangaroo</title>
+    <title>TweetsAgainstHumanity by HoltMaki</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,35 +18,43 @@
         <h1>TweetsAgainstHumanity</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity">View the Project on GitHub <small>PurpleKangaroo/TweetsAgainstHumanity</small></a></p>
+        <p class="view"><a href="https://github.com/HoltMaki/TweetsAgainstHumanity">View the Project on GitHub <small>HoltMaki/TweetsAgainstHumanity</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/HoltMaki/TweetsAgainstHumanity/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/HoltMaki/TweetsAgainstHumanity/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/HoltMaki/TweetsAgainstHumanity">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h2>
-<a name="a-twitterbot-in-python" class="anchor" href="#a-twitterbot-in-python"><span class="octicon octicon-link"></span></a>A Twitterbot In Python</h2>
+<a name="a-twitterbot-in-python" class="anchor" href="#a-twitterbot-in-python"><span class="octicon octicon-link"></span></a><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity">A Twitterbot In Python</a>
+</h2>
 
-<p>TweetsAgainstHumanity is a Twitterbot written in Python that tweets random combinations of Cards Against Humanity cards.</p>
+<p><a href="https://github.com/PurpleKangaroo/TweetsAgainstHumanity">TweetsAgainstHumanity</a> is a <a href="https://twitter.com/TAHumanityBot">Twitterbot</a> written in Python that tweets random combinations of <a href="http://cardsagainsthumanity.com/">Cards Against Humanity</a> cards. </p>
+
+<h4>
+<a name="follow-the-twitterbot-tahumanitybot-on-twitter" class="anchor" href="#follow-the-twitterbot-tahumanitybot-on-twitter"><span class="octicon octicon-link"></span></a>Follow the twitterbot <a href="https://twitter.com/TAHumanityBot">@TAHumanityBot</a> on twitter.</h4>
+
+<p><img src="https://github.com/HoltMaki/TweetsAgainstHumanity/blob/master/TAHTwitterBird.png?raw=true" alt="Picture"></p>
 
 <h3>
-<a name="purplekangaroos-cards-against-humanity-project" class="anchor" href="#purplekangaroos-cards-against-humanity-project"><span class="octicon octicon-link"></span></a>PurpleKangaroo's Cards Against Humanity Project</h3>
+<a name="purplekangaroos-cards-against-humanity-project" class="anchor" href="#purplekangaroos-cards-against-humanity-project"><span class="octicon octicon-link"></span></a><a href="http://purplekangaroo.github.io/CardsAgainstHumanity/">PurpleKangaroo's Cards Against Humanity Project</a>
+</h3>
 
-<p>The statistics about the number of retweets that any random combination of Cards Against Humanity cards gets will be used in the development of the AI of the computer players of <a href="https://github.com/PurpleKangaroo" class="user-mention">@PurpleKangaroo</a>'s <a href="https://github.com/PurpleKangaroo/CardsAgainstHumanity">CardsAgainstHumanity</a> Project</p>
+<p>The statistics about the number of retweets that any random combination of Cards Against Humanity cards gets will be used in the development of the AI of the computer players of <a href="https://github.com/PurpleKangaroo">@PurpleKangaroo</a>'s <a href="http://purplekangaroo.github.io/CardsAgainstHumanity/">CardsAgainstHumanity Project</a>.</p>
 
 <h3>
-<a name="purplekangaroo" class="anchor" href="#purplekangaroo"><span class="octicon octicon-link"></span></a>PurpleKangaroo</h3>
+<a name="purplekangaroo" class="anchor" href="#purplekangaroo"><span class="octicon octicon-link"></span></a><a href="https://github.com/PurpleKangaroo">PurpleKangaroo</a>
+</h3>
 
-<p><a href="https://github.com/PurpleKangaroo" class="user-mention">@PurpleKangaroo</a> is a small organization of Lake Washington High School students who are interested in programing, many of whom are in the school's AP Computer Science class.</p>
+<p><a href="https://github.com/PurpleKangaroo">@PurpleKangaroo</a> is a small organization of <a href="http://www.lwsd.org/school/lwhs/Pages/default.aspx">Lake Washington High School</a> students who are interested in programing, many of whom are in the school's AP Computer Science class.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Holt Maki(<a href="https://github.com/HoltMaki" class="user-mention">@HoltMaki</a>)</p>
+<p>Holt Maki(<a href="https://github.com/HoltMaki">@HoltMaki</a>)</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
@@ -54,7 +62,7 @@
 <p><a href="mailto:purplekangs@gmail.com">purplekangs@gmail.com</a></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/PurpleKangaroo">PurpleKangaroo</a></p>
+        <p>This project is maintained by <a href="https://github.com/HoltMaki">HoltMaki</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
